<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/fragment_controls_padding">
    <TextView
            android:id="@+id/functions_label_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/functions_label"
            android:labelFor="@+id/function_radios"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@id/function_radios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/functions_label_text">
    </RadioGroup>
    <LinearLayout
            android:id="@+id/minmax_text_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/function_radios"
            android:weightSum="2"
            android:layout_marginBottom="@dimen/fragment_controls_vertical_margin">
        <EditText
                android:id="@+id/x_min_text"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/controls_x_min"/>
        <EditText
                android:id="@+id/x_max_text"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/controls_x_max"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/interval_count_labelvalue_layout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/minmax_text_layout">
        <TextView
                android:id="@+id/interval_count_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/controls_n_intervals"
                android:labelFor="@+id/interval_count_seekbar"
                android:importantForAccessibility="no"
                />
        <TextView
                android:id="@+id/interval_count_value"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:importantForAccessibility="no"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/interval_count_labelvalue_layout"
            android:orientation="horizontal"
            android:weightSum="6">
        <SeekBar
                android:id="@+id/interval_count_seekbar"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="5"/>
        <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/controls_submit"
                android:layout_weight="1"
                android:contentDescription="@string/controls_ax_submit"/>
    </LinearLayout>
</RelativeLayout>